--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -57,16 +57,16 @@ flex-direction: column;
   outline: none;
   border: none;
   flex: 1 1 0%;
-  min-height: 26px;
+  height: auto;
   overflow: hidden;
   overflow-wrap: break-word;
-  height: 26px;
   line-height: 1.4;
   font-size: 18px;
   padding: 0;
   border-bottom-style: solid;
   border-width: 1px;
   border-color: #dee0e1;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 #cancel-or-submit-question-section {
