--- a/app/assets/stylesheets/api/dashboard.scss
+++ b/app/assets/stylesheets/api/dashboard.scss
@@ -37,18 +37,18 @@
 }
 
 .category {
-    color: #636466;
-    font-weight: 400;
-    height: 23px;
-    line-height: 18.2px;
-    margin-bottom: 8px;
-    padding: 10px;
-    font-size: 13px;
+  color: #636466;
+  font-weight: 400;
+  height: 23px;
+  line-height: 18.2px;
+  padding: 2px 0px 0px 10px;
+  font-size: 13px;
 }
 
 .category-bar:hover {
   background-color: #e6e7e8;
   cursor: pointer;  
+  border-radius: 3px;
 }
 
 .header-question-click {
@@ -133,12 +133,13 @@
 
 .category-bar {
   display: flex;
+  margin: 10px 0px 10px 0px;
+  padding: 3px;
 }
 
 .category-icon {
   height: 25px;
   width: 25px;
-  padding: 10px 0px 0px 0px;
 }
 
 #feed-icon {
