--- a/app/assets/stylesheets/question_box.scss
+++ b/app/assets/stylesheets/question_box.scss
@@ -88,14 +88,12 @@ flex-direction: column;
   font-size: 15px;
   color: #fff;
   background-color: rgb(46, 105, 255);
-  border-bottom-left-radius: 1000px;
-  border-bottom-right-radius: 1000px;
-  border-top-left-radius: 1000px;
-  border-top-right-radius: 1000px;
+  border-radius: 1000px;
   font-weight: 500;
   text-size-adjust: 100%;
   padding: 7px 20px 7px 20px;
   border-color: #2e69ff;
+  border-width: 0px;
 }
 .ask-question-button:hover {
   cursor: pointer;  
