--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -198,3 +198,23 @@
   height: 40px;
   padding: 10px;
 }
+
+.back {
+  box-sizing: border-box;
+  transition-property: all;
+  transition-duration: 180ms;
+  transition-timing-function: ease-in-out;
+  opacity: 1;
+  z-index: 299;
+  background-color: rgba(36, 36, 36, 0.9);
+  top: 50px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  position: fixed;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  z-index: -2;
+}
