--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,6 @@
 #header {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background-color: rgb(255, 255, 255);
   position: sticky;
@@ -14,6 +14,13 @@
   border-color: #dee0e1;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.04);
   z-index: 1;
+}
+
+#inner-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1000px;
 }
 
 #logo {
