--- a/app/assets/stylesheets/api/question_answer.scss
+++ b/app/assets/stylesheets/api/question_answer.scss
@@ -9,15 +9,17 @@
 
 .question-page {
   display: flex;
-  flex-direction: column;
   background-color: white;
   min-height: -webkit-fill-available;
+  margin: 0px auto 0px auto;
+  width: 1000px;
+  padding: 30px 24px 24px 24px;
 }
 
 .question-page-box {
-  width: 630px;
-  padding: 30px 24px 0px 24px;
-  align-self: center;
+  width: 700px;
+  font-size: 13px;
+  color: #282829;
 }
 
 .question-page-question {
@@ -95,4 +97,21 @@
 
 .topic-tags:hover{
   color: #2e69ff;
+}
+
+.related-questions-title {
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #dee0e1;
+  font-weight: 500;
+  font-size: 15px;
+  color: #282829;
+  padding-bottom: 10px;
+}
+
+.related-questions {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  height: -webkit-fill-available;
+  width: 300px;
+  padding-left: 50px;
 }
