--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -12,6 +12,10 @@
   padding: 30px 24px 24px 24px;
 }
 
+.topic-page-background {
+  background-color: #efefef;
+}
+
 .topic-dash {
   box-sizing: border-box;
   direction: ltr;
