--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -19,31 +19,18 @@
    color:grey;
    text-align: center;
    font-size: 19px;
-   font-family: fantasy;
-   margin: 32px;
- }
-
-.welcome-quote-signup {
-   color:grey;
-   text-align: center;
-   font-size: 19px;
-   font-family: fantasy;
-   margin: 15px;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-weight: 200;
+   margin-top: 32px;
  }
 
 .author-info {
    color:grey;
    text-align: center;
    font-size: 19px;
-   font-family: fantasy;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-weight: 200;
    margin: 32px;
- }
-.author-info-signup {
-   color:grey;
-   text-align: center;
-   font-size: 19px;
-   font-family: fantasy;
-   margin: 5px;
  }
 
  .welcome-content {
@@ -82,10 +69,6 @@
   #login-form {
     border-left: solid 1px lightgrey ;
     padding: 0 40px 40px 40px;
-  }
-
-  #signup-page-height {
-    height: 350px;
   }
 
   #signup-form {
