--- a/app/assets/stylesheets/welcomepage.scss
+++ b/app/assets/stylesheets/welcomepage.scss
@@ -12,7 +12,6 @@
    color: #B92B27;
    font-size: 80px;
    text-align: center;
-   font-weight: bolder;
  }
 
 .welcome-quote {
@@ -30,7 +29,8 @@
    font-size: 19px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 200;
-   margin: 32px;
+   margin: 16px 0px 32px 0px;
+   height: 45px;
  }
 
  .welcome-content {
@@ -52,11 +52,12 @@
   }
 
  .forms {
-   display: flex;
-   flex-direction: row; 
-   justify-content: space-around;
-   border-bottom: solid 1px lightgray;
-   padding: 32px;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around;
+  border-bottom: solid 1px lightgray;
+  padding: 32px;
+  height: 320px;
 }
 
  .session-form {
@@ -68,7 +69,7 @@
   
   #login-form {
     border-left: solid 1px lightgrey ;
-    padding: 0 40px 40px 40px;
+    padding: 0 20px 0px 32px;
   }
 
   #signup-form {
@@ -128,11 +129,10 @@
     color: #949494;
     font-size: 13px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    padding: 4%;
-    padding-top: 2%;
+    padding: 10px 20px 0px 0px;
     float: left;
     box-sizing: border-box;
-    width: 50%;
+    width: 46%;
     font-weight: 400;
   }
 
@@ -147,7 +147,7 @@
     margin-bottom: 16px;
     font-size: 16px;
     padding: 8px 16px;
-    width: 270px;
+    width: 250px;
     box-shadow: 0 1px 1px 0 rgba(200,200,200,0.2);
     box-sizing: border-box;
     transition: opacity ease-in-out 100ms,color ease-in-out 100ms,background-color ease-in-out 100ms,border-color ease-in-out 100ms;
@@ -172,7 +172,7 @@
     margin-bottom: 16px;
     font-size: 16px;
     padding: 8px 16px;
-    width: 270px;
+    width: 250px;
     box-shadow: 0 1px 1px 0 rgba(200,200,200,0.2);
     box-sizing: border-box;
     transition: opacity ease-in-out 100ms,color ease-in-out 100ms,background-color ease-in-out 100ms,border-color ease-in-out 100ms;
@@ -206,22 +206,22 @@
 
 .session-form-input-boxes {
   margin-top: 10px;
-    float: right;
-    box-sizing: border-box;
-    padding: 3px 5px;
-    height: 15px;
-    width: 115px;
-    min-height: 27px;
-    background: #fff;
-    outline: 0;
-    border: 1px solid #e2e2e2;
-    border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
-    font-size: 13px;
-    line-height: 1.4;
-    margin-bottom: 8px;
-    font-weight: 400;
-    display: block;
+  float: right;
+  box-sizing: border-box;
+  padding: 3px 5px;
+  height: 15px;
+  width: 115px;
+  min-height: 27px;
+  background: #fff;
+  outline: 0;
+  border: 1px solid #e2e2e2;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
+  font-size: 13px;
+  line-height: 1.4;
+  margin-bottom: 8px;
+  font-weight: 400;
+  display: block;
 }
 
 .info-links {
@@ -230,16 +230,16 @@
 }
 
 .error-messages {
-    padding: 8px;
-    border: 1px solid #b92b27;
-    color: #b92b27;
-    clear: both;
-    border-radius: 4px;
-    margin: 8px 0;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    line-height: 1.4;
+  padding: 8px;
+  border: 1px solid #b92b27;
+  color: #b92b27;
+  clear: both;
+  border-radius: 4px;
+  margin: 8px 0;
+  font-size: 13px;
+  font-weight: 400;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  line-height: 1.4;
 }
 
 .mainpage-footer {
