--- a/app/assets/stylesheets/api/topics.scss
+++ b/app/assets/stylesheets/api/topics.scss
@@ -10,6 +10,7 @@
   width: 1000px;
   margin: 0px auto 0px auto;
   padding: 30px 24px 24px 24px;
+  height: -webkit-fill-available;
 }
 
 .topic-page-background {
